--- a/src/components/Product.module.css
+++ b/src/components/Product.module.css
@@ -1,3 +1,51 @@
+.logo {
+  color: hsl(26, 100%, 55%);
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+h2 {
+  font-size: 3rem;
+  font-weight: 700;
+}
+
+.description {
+  color: hsl(219, 9%, 45%);
+  line-height: 1.5;
+}
+
+.discount-box {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.current-price {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-right: 2rem;
+}
+
+.old-price {
+  font-weight: 700;
+  color: hsl(220, 14%, 75%);
+  text-decoration: line-through;
+}
+
+.discount {
+  color: hsl(26, 100%, 55%);
+  background-color: hsl(25, 100%, 94%);
+  padding: 0.25rem 0.5rem;
+  font-weight: 700;
+}
+
+.actions {
+  display: flex;
+  gap: 1rem;
+  margin-top: 2rem;
+  justify-content: center;
+}
+
 .add {
   background-color: hsl(26, 100%, 55%);
   color: #fff;
@@ -5,15 +53,15 @@
   border: none;
   border-radius: 10px;
   cursor: pointer;
-}
-
-.actions {
-  display: flex;
-  gap: 1rem;
+  flex: 1;
+  font-weight: 700;
+  font-size: 1rem;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 .quantity {
   background-color: hsl(223, 64%, 98%);
+  font-weight: 700;
 }
 
 .quantity button {
@@ -23,4 +71,5 @@
   padding: 1rem 2rem;
   border-radius: 10px;
   cursor: pointer;
+  font-size: 1.5rem;
 }
