--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -3,7 +3,20 @@
     align-items: center;
     border-bottom: 1px solid hsl(219, 9%, 45%);
     width: 80vw;
+    height: 80px;
     margin: 0 auto 5rem;
+    gap: 1rem;
+}
+
+.header h1 {
+    font-size: clamp(1rem, 10vw ,2rem);
+    margin: 0;
+}
+
+.icon {
+    display: none;
+    font-size: clamp(1rem, 5vw ,1.5rem);
+    color: hsl(219, 9%, 45%);
 }
 
 .header ul {
@@ -11,6 +24,7 @@
     display: flex;
     gap: 1rem;
 }
+
 
 .header a {
     text-decoration: none;
@@ -21,20 +35,34 @@
     margin-right: auto;
 }
 
-.user-photo {
+.user {
     border-radius: 50%;
     border: 2px solid transparent;
     width: 45px;
     height: 45px;
-    margin-left: 2rem;
     cursor: pointer;
 }
 
-.user-photo:hover {
+.user:hover {
     border-color: orange;
 }
 
-.user-photo img{
+.user img{
     display: block;
     max-width: 100%;
 }
+
+
+@media screen and (max-width: 800px) {
+    .icon {
+        display: flex;
+        align-items: center;
+    }
+
+    .header ul {
+        display: none;
+    }
+}
+
+/* MQ max width 400px */
+/* remove border, increase width */
