--- a/src/components/MainContent.module.css
+++ b/src/components/MainContent.module.css
@@ -1,7 +1,16 @@
 .main {
-    display: flex;
-    justify-content: center;
-    gap: 5rem;
-    width: 80vw;
-    margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  gap: 5rem;
+  width: 80vw;
+  margin: 0 auto;
+  position: relative;
+  height: 100%;
+}
+
+@media screen and (max-width: 900px) {
+  .main {
+    flex-direction: column;
+    align-items: center;
+  }
 }
