--- a/src/components/Gallery.module.css
+++ b/src/components/Gallery.module.css
@@ -1,25 +1,52 @@
 .gallery {
   display: flex;
   flex-direction: column;
+  position: relative;
+}
+
+.backdrop {
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.75);
+  z-index: 200;
+  top: 0;
+  left: 0;
+  position: fixed;
+}
+
+.lightbox {
+  position: fixed;
+  z-index: 300;
+  margin: 0 auto;
+  top: 10%;
+  left: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: center;
+  width: 40%;
+}
+
+.close {
+  background-color: transparent;
+  border: none;
+  font-size: 2rem;
+  color: #fff;
+}
+
+.gallery img {
+  max-width: 100%;
 }
 
 .hidden {
-  display: none; 
+  display: none;
 }
 
 .shown {
   display: flex;
   justify-content: center;
   border-radius: 10px;
-}
-
-.focused {
-  border-radius: 20px;
-  overflow: hidden;
-}
-
-.gallery img {
-  max-width: 100%;
+  /* max-width: 100%; */
 }
 
 .pager {
@@ -30,9 +57,13 @@
   justify-content: space-evenly;
 }
 
+.side-btn {
+  display: none;
+}
+
 .pager img {
   display: block;
-  max-width: 100%;
+  /* max-width: 100%; */
 }
 
 .pager li {
@@ -41,6 +72,7 @@
   overflow: hidden;
   box-sizing: border-box;
   border: 2px solid transparent;
+  cursor: pointer;
 }
 
 .pager li:hover {
@@ -49,4 +81,47 @@
 
 .pager li.active {
   border-color: orange;
+}
+
+@media screen and (max-width: 600px) {
+  .pager {
+    display: none;
+  }
+
+  .shown {
+    border-radius: 0;
+  }
+
+  .side-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    background-color: #fff;
+    border-radius: 50%;
+    border: none;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+  }
+
+  .side-btn img {
+    display: block;
+    max-width: 100%;
+  }
+
+  .right {
+    top: 50%;
+    left: 85%;
+  }
+
+  .left {
+    top: 50%;
+    left: 5%;
+  }
+
+  .lightbox,
+  .backdrop {
+    display: none;
+  }
 }
