--- a/src/components/Gallery.module.css
+++ b/src/components/Gallery.module.css
@@ -5,33 +5,38 @@
 }
 
 .backdrop {
-  width: 100%;
-  height: 100vh;
   background-color: rgba(0, 0, 0, 0.75);
-  z-index: 200;
+  height: 100vh;
+  width: 100%;
+  position: fixed;
   top: 0;
   left: 0;
-  position: fixed;
+  z-index: 200;
 }
 
 .lightbox {
-  position: fixed;
-  z-index: 300;
-  margin: 0 auto;
-  top: 10%;
-  left: 30%;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   justify-content: center;
+  position: fixed;
+  top: 10%;
+  left: 30%;
   width: 40%;
+  margin: 0 auto;
+  z-index: 300;
 }
 
 .close {
   background-color: transparent;
-  border: none;
-  font-size: 2rem;
   color: #fff;
+  font-size: 2rem;
+  border: none;
+}
+
+.close:hover {
+  color: hsl(26, 100%, 55%);
+  cursor: pointer;
 }
 
 .gallery img {
@@ -46,15 +51,14 @@
   display: flex;
   justify-content: center;
   border-radius: 10px;
-  /* max-width: 100%; */
 }
 
 .pager {
-  width: 100%;
   display: flex;
-  list-style: none;
-  padding: 0;
   justify-content: space-evenly;
+  list-style: none;
+  width: 100%;
+  padding: 0;
 }
 
 .side-btn {
@@ -63,15 +67,14 @@
 
 .pager img {
   display: block;
-  /* max-width: 100%; */
 }
 
 .pager li {
-  border-radius: 20px;
-  width: 20%;
   overflow: hidden;
   box-sizing: border-box;
+  width: 20%;
   border: 2px solid transparent;
+  border-radius: 20px;
   cursor: pointer;
 }
 
@@ -93,15 +96,15 @@
   }
 
   .side-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
     background-color: #fff;
-    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border: none;
-    width: 40px;
+    border-radius: 50%;
+    position: absolute;
     height: 40px;
+    width: 40px;
     cursor: pointer;
   }
 
@@ -111,13 +114,13 @@
   }
 
   .right {
-    top: 50%;
     left: 85%;
+    top: 50%;
   }
 
   .left {
-    top: 50%;
     left: 5%;
+    top: 50%;
   }
 
   .lightbox,
