--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -1,88 +1,98 @@
 .header {
-    display: flex;
-    align-items: center;
-    border-bottom: 1px solid hsl(219, 9%, 45%);
-    width: 80vw;
-    height: 80px;
-    margin: 0 auto 5rem;
-    gap: 1rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin: 0 auto 5rem;
+  border-bottom: 1px solid hsl(219, 9%, 45%);
+  height: 80px;
+  width: 80vw;
 }
 
 .header h1 {
-    font-size: clamp(1rem, 10vw ,2rem);
-    margin: 0;
+  font-size: clamp(1rem, 10vw, 2rem);
+  margin: 0;
 }
 
 .icon {
-    display: none;
-    font-size: clamp(1rem, 5vw ,1.5rem);
-    color: hsl(219, 9%, 45%);
-}
-
-.header ul {
-    list-style: none;
-    display: flex;
-    gap: 1rem;
-}
-
-
-.header a {
-    text-decoration: none;
-    color: hsl(219, 9%, 45%);
+  display: none;
+  color: hsl(219, 9%, 45%);
+  font-size: clamp(1rem, 5vw, 1.5rem);
 }
 
 .header nav {
-    margin-right: auto;
+  display: flex;
+  align-items: stretch;
+  margin-right: auto;
+  height: 90%;
+}
+
+.header ul {
+  display: flex;
+  gap: 1rem;
+  margin: 0;
+  list-style: none;
+}
+
+.header li {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  transition: all 0.1s ease-in-out;
+}
+
+.header li:hover {
+  border-bottom: 5px solid hsl(26, 100%, 55%);
+  height: 100%;
+}
+
+.header a {
+  color: hsl(219, 9%, 45%);
+  text-decoration: none;
 }
 
 .user {
-    border-radius: 50%;
-    border: 2px solid transparent;
-    width: 45px;
-    height: 45px;
-    cursor: pointer;
+  border: 2px solid transparent;
+  border-radius: 50%;
+  height: 45px;
+  width: 45px;
+  cursor: pointer;
 }
 
 .user:hover {
-    border-color: orange;
+  border-color: orange;
 }
 
-.user img{
-    display: block;
-    max-width: 100%;
+.user img {
+  display: block;
+  max-width: 100%;
 }
-
 
 @media screen and (max-width: 800px) {
-    .icon {
-        display: flex;
-        align-items: center;
-        margin-left: 1rem;
-    }
+  .icon {
+    display: flex;
+    align-items: center;
+    margin-left: 1rem;
+  }
 
-    .header ul {
-        display: none;
-    }
+  .header ul {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 600px) {
-    .header {
-        border-bottom: none;
-        width: 100%;
-        height: 70px;
-        margin: 0;
-        /* padding: 1rem; */
-        justify-content: space-evenly;
-    }
+  .header {
+    justify-content: space-evenly;
+    border-bottom: none;
+    margin: 0;
+    height: 70px;
+    width: 100%;
+  }
 
-    .user {
-        border-radius: 50%;
-        border: 2px solid transparent;
-        width: 35px;
-        height: 35px;
-        cursor: pointer;
-    }
+  .user {
+    border: 2px solid transparent;
+    border-radius: 50%;
+    height: 35px;
+    width: 35px;
+    cursor: pointer;
+  }
 }
-
-/* MQ max width 400px */
-/* remove border, increase width */
