--- a/src/components/Layout/SideNav.module.css
+++ b/src/components/Layout/SideNav.module.css
@@ -1,34 +1,34 @@
 .backdrop {
-    background-color: rgba(0, 0, 0, 0.75);
     position: fixed;
+    background-color: rgba(0, 0, 0, 0.75);
     left: 0;
     top: 0;
-    z-index: 20;
     height: 100vh;
     width: 100%;
+    z-index: 20;
 }
 
 .nav nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 80%;
     background-color: #fff;
-    z-index: 100;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 80%;
+    z-index: 100;
 }
 
 .nav button {
-    border: none;
     background-color: transparent;
-    font-weight: 700;
     color: grey;
     font-size: 1rem;
+    font-weight: 700;
     padding: 0;
     margin: .5rem 0;
+    border: none;
 }
 
 .nav ul {
@@ -36,5 +36,6 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    margin-top: 2rem;
 }
 
