--- a/src/components/MainContent.module.css
+++ b/src/components/MainContent.module.css
@@ -2,10 +2,10 @@
   display: flex;
   justify-content: center;
   gap: 5rem;
+  height: 100%;
   width: 80vw;
   margin: 0 auto;
   position: relative;
-  height: 100%;
 }
 
 @media screen and (max-width: 900px) {
@@ -18,6 +18,7 @@
 @media screen and (max-width: 600px) {
   .main {
     width: 100%;
-    gap: 1.5rem
+    gap: 1.5rem;
+    margin-bottom: 2rem;
   }
 }
