--- a/src/components/Product.module.css
+++ b/src/components/Product.module.css
@@ -27,37 +27,41 @@
 }
 
 .old-price {
-  font-weight: 700;
   color: hsl(220, 14%, 75%);
+  font-weight: 700;
   text-decoration: line-through;
 }
 
 .discount {
-  color: hsl(26, 100%, 55%);
   background-color: hsl(25, 100%, 94%);
-  padding: 0.25rem 0.5rem;
+  color: hsl(26, 100%, 55%);
   font-weight: 700;
+  padding: 0.25rem 0.5rem;
 }
 
 .actions {
   display: flex;
   gap: 1rem;
-  margin-top: 2rem;
   justify-content: center;
   flex-wrap: nowrap;
+  margin-top: 2rem;
 }
 
 .add {
   background-color: hsl(26, 100%, 55%);
   color: #fff;
+  font-size: 1rem;
+  font-weight: 700;
   padding: 1rem 2rem;
   border: none;
   border-radius: 10px;
-  cursor: pointer;
-  flex: 1;
-  font-weight: 700;
-  font-size: 1rem;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  flex: 1;
+  cursor: pointer;
+}
+
+.cartIcon {
+  color: #fff;
 }
 
 .quantity {
@@ -72,13 +76,21 @@
 }
 
 .quantity button {
-  border: none;
   background-color: transparent;
   color: hsl(26, 100%, 55%);
+  font-size: 1.5rem;
   padding: 1rem 2rem;
+  border: none;
   border-radius: 10px;
   cursor: pointer;
-  font-size: 1.5rem;
+}
+
+.add:hover {
+  background-color: hsla(26, 100%, 55%, 0.75);
+}
+
+.quantity button:hover {
+  color: hsla(26, 100%, 55%, 0.75);
 }
 
 @media screen and (max-width: 1200px) {
@@ -95,7 +107,7 @@
   }
 
   .add {
-    font-size: .8rem;
+    font-size: 0.8rem;
     padding: 1.25rem 2rem;
   }
 }
@@ -107,19 +119,19 @@
 
   .actions {
     display: flex;
-    gap: 1rem;
-    margin-top: 1.5rem;
     justify-content: center;
     flex-wrap: nowrap;
     flex-direction: column;
+    gap: 1rem;
+    margin-top: 1.5rem;
   }
 
   .quantity div {
-    width: 100%;
     text-align: center;
+    width: 100%;
   }
 
-  .price { 
+  .price {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -132,9 +144,4 @@
     font-size: 1.8rem;
     margin: 1rem 0;
   }
-
-  .logo {
-  }
 }
-
-
