--- a/src/components/MainContent.module.css
+++ b/src/components/MainContent.module.css
@@ -3,7 +3,7 @@
   justify-content: center;
   gap: 5rem;
   height: 100%;
-  width: 80vw;
+  width: min(1000px, 80vw);
   margin: 0 auto;
   position: relative;
 }
